--- a/mvp/map+searchbar.html
+++ b/mvp/map+searchbar.html
@@ -134,6 +134,10 @@
           const [[x0, y0], [x1, y1]] = path.bounds(d);
           event.stopPropagation();
           states.transition().style("fill", null);
+
+
+          chartsDataJoin(college_mobility.filter(d => this.__data__.properties.name == d.state_name))
+
           d3.select(this).transition().style("fill", "black");
           svg.transition().duration(750).call(
             zoom.transform,
@@ -143,6 +147,8 @@
               .translate(-(x0 + x1) / 2, -(y0 + y1) / 2),
             d3.pointer(event, svg.node())
           );
+
+          console.log(this)
         }
 
         function zoomed(event) {
