Update visualization title

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://rawgithub.com/Caged/d3-tip/master/examples/example-styles.css">
   </head>
   <body>
-    <h1>6.859: Search Box Demo</h1>
+    <h1>6.859: Social Mobility in the US College System (EARLY DEMO)</h1>
 
     <p>Search for schools using the searchbox. Clicking on the white background of the map will reset your search.
     <input type="text" value="" id="search_box" placeholder="Search for schools..."/>
