Add intro text blurb and Diego's flourish chart

--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
     <link rel="stylesheet" href="https://rawgithub.com/Caged/d3-tip/master/examples/example-styles.css">
   </head>
   <body>
-    <h1>6.859: Social Mobility in the US College System (EARLY DEMO)</h1>
+    <h1>6.859: Social Mobility in the US College System</h1>
+
+    <!-- <div class="flourish-embed flourish-chart" data-src="visualisation/5819664" style = "width: 400px;"><script src="https://public.flourish.studio/resources/embed.js"></script></div>
+    <p> US states present different opportunities for social mobility (Figure 1). This website intends to provide you with a tool to better understand the heterogeneity in the degree of social mobility that US colleges provide and related factors. It is based on data by the Opportunity Insights project at Harvard University. The interactive tool at the bottom will allow you to explore this issue at the college level.</p> -->
 
     <p>Search for schools using the searchbox. Clicking on the white background of the map will reset your search.
     <input type="text" value="" id="search_box" placeholder="Search for schools..."/>
